sinalcabo/force-app/main/default/objects/Celula__c/Celula__c.object-meta.xml
<CustomObject>
    <description>Célula de rede do operador. Cada registo corresponde a um polígono dos mapas de rede e é a unidade por onde se localiza uma intervenção. Alimenta a proposta automática de célula, tecnologia e território nas ordens de trabalho.</description>
    <label>Célula</label>
    <nameField>
        <label>Célula</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Células</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>