sinalcabo/force-app/main/default/objects/Celula__c/fields/Activa__c.field-meta.xml
<CustomField>
    <fullName>Activa__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se a célula ainda existe na rede. Só células activas são propostas nas ordens.</description>
    <inlineHelpText>Desliga quando a célula deixar de existir. As ordens antigas continuam ligadas a ela.</inlineHelpText>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>