sinalcabo/force-app/main/default/objects/Celula__c/fields/Area_km2__c.field-meta.xml
<CustomField>
    <fullName>Area_km2__c</fullName>
    <description>Área do polígono da célula em quilómetros quadrados.</description>
    <inlineHelpText>Calculada a partir do polígono do mapa de rede. Ajuda a perceber a dispersão da célula.</inlineHelpText>
    <label>Área (km2)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>