sinalcabo/force-app/main/default/objects/Celula__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <description>Código da célula tal como aparece nos mapas de rede do operador, por exemplo ABD01. É a chave usada na carga dos mapas e na proposta automática de célula na ordem.</description>
    <externalId>true</externalId>
    <inlineHelpText>Escreve o código como vem do mapa de rede, sem espaços. Não pode haver duas células com o mesmo código.</inlineHelpText>
    <label>Código</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>