sinalcabo/force-app/main/default/objects/Celula__c/fields/Data_Mapa__c.field-meta.xml
<CustomField>
    <fullName>Data_Mapa__c</fullName>
    <description>Data do mapa de rede de onde a célula foi carregada.</description>
    <inlineHelpText>Diz a que versão dos mapas da NOS esta célula corresponde.</inlineHelpText>
    <label>Data do mapa</label>
    <type>Date</type>
</CustomField>