sinalcabo/force-app/main/default/objects/Celula__c/fields/Id_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente__c</fullName>
    <description>Identificador interno da célula na plataforma do operador, quando o mapa o traz. Tem 24 caracteres.</description>
    <inlineHelpText>Vem da carga dos mapas. Fica vazio se o mapa não trouxer identificador.</inlineHelpText>
    <label>Identificador na NOS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>