sinalcabo/force-app/main/default/objects/Celula__c/fields/Localidade__c.field-meta.xml
<CustomField>
    <fullName>Localidade__c</fullName>
    <description>Concelho onde fica a célula, tal como a NOS o regista nos territórios.</description>
    <inlineHelpText>Concelho onde fica a célula, tal como a NOS o regista.</inlineHelpText>
    <label>Concelho</label>
    <length>80</length>
    <type>Text</type>
</CustomField>