sinalcabo/force-app/main/default/objects/Celula__c/fields/Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Localizacao__c</fullName>
    <description>Ponto de referência da célula em coordenadas. Coloca a ordem no mapa e permite calcular distâncias em pesquisas.</description>
    <inlineHelpText>Latitude e longitude em graus decimais com seis casas. Vem do centro do polígono do mapa de rede.</inlineHelpText>
    <label>Localização</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>