sinalcabo/force-app/main/default/objects/Celula__c/fields/Origem_Referencia__c.field-meta.xml
<CustomField>
    <fullName>Origem_Referencia__c</fullName>
    <description>Diz como foi obtido o ponto de referência da célula, para se saber quanta confiança lhe dar.</description>
    <inlineHelpText>A carga dos mapas grava Centro do polígono. Passa a Armário principal quando alguém confirmar a morada no terreno.</inlineHelpText>
    <label>Origem da coordenada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro do polígono</fullName>
            </value>
            <value>
                <fullName>Centróide das obras</fullName>
            </value>
            <value>
                <fullName>Armário principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>