sinalcabo/force-app/main/default/objects/Celula__c/fields/Ruas_Conhecidas__c.field-meta.xml
<CustomField>
    <fullName>Ruas_Conhecidas__c</fullName>
    <description>Moradas já vistas em ordens desta célula, uma por linha. Não é a lista oficial de ruas do operador.</description>
    <inlineHelpText>Serve para confirmar a célula quando o texto da NOS não traz o código. Podes acrescentar moradas à mão.</inlineHelpText>
    <label>Ruas conhecidas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>