sinalcabo/force-app/main/default/objects/Celula__c/fields/Ruas_Principais__c.field-meta.xml
<CustomField>
    <fullName>Ruas_Principais__c</fullName>
    <description>As ruas mais frequentes da célula em texto curto, para aparecerem na aplicação móvel.</description>
    <inlineHelpText>Resumo das ruas conhecidas. Existe porque a aplicação móvel não mostra campos de texto longo.</inlineHelpText>
    <label>Ruas principais</label>
    <length>255</length>
    <type>Text</type>
</CustomField>