sinalcabo/force-app/main/default/objects/Celula__c/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <description>Tecnologia de rede predominante na célula.</description>
    <inlineHelpText>HFC é rede coaxial e FTTH é fibra até casa. A ordem herda este valor quando a célula é confirmada.</inlineHelpText>
    <label>Tecnologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HFC</fullName>
            </value>
            <value>
                <fullName>FTTH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>