sinalcabo/force-app/main/default/objects/Celula__c/fields/Territorio__c.field-meta.xml
<CustomField>
    <fullName>Territorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Território de serviço responsável pela célula. Serve para propor o território da ordem e para detectar divergências com o grupo que a NOS indica.</description>
    <inlineHelpText>Escolhe o território que atende esta célula. Se a ordem chegar com um grupo de outro território, fica marcada com divergência.</inlineHelpText>
    <label>Território</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Células</relationshipLabel>
    <relationshipName>Celulas</relationshipName>
    <type>Lookup</type>
</CustomField>