sinalcabo/force-app/main/default/objects/Celula__c/fields/Zona_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Zona_Cliente__c</fullName>
    <description>Zona operacional a que a célula pertence do lado do operador, como aparece nos mapas e nas listagens.</description>
    <inlineHelpText>Vem da carga dos mapas. Exemplos: Zona Centro 1, Zona Sul 1.</inlineHelpText>
    <label>Zona (NOS)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>