sinalcabo/force-app/main/default/objects/Celula__c/listViews/Por_Territorio.listView-meta.xml
<ListView>
    <fullName>Por_Territorio</fullName>
    <columns>Territorio__c</columns>
    <columns>NAME</columns>
    <columns>Tecnologia__c</columns>
    <columns>Zona_Cliente__c</columns>
    <columns>Localidade__c</columns>
    <columns>Ruas_Principais__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activa__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Por território</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>