sinalcabo/force-app/main/default/objects/Celula__c/listViews/Sem_Coordenada.listView-meta.xml
<ListView>
    <fullName>Sem_Coordenada</fullName>
    <columns>NAME</columns>
    <columns>Territorio__c</columns>
    <columns>Zona_Cliente__c</columns>
    <columns>Localidade__c</columns>
    <columns>Origem_Referencia__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Localizacao__Latitude__s</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Activa__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Sem coordenada</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>